# parameter-estimation

./: CMakeLists.txt  README.md  algorithm.cpp  algorithm.h  main.cpp  martix.cpp
